--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -18,6 +18,9 @@
                 <a class="nav-link" href="#">خانه</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/dashboard"> داشبورد </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">تمام پست ها</a>
             </li>
             <li class="nav-item">
@@ -25,6 +28,12 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">تماس با ما</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/users/register"> ثبت نام </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/users/login"> ورود </a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
