upload photos completed. (get photo  address and use shortid instead uuid.)

--- a/views/private/addPost.ejs
+++ b/views/private/addPost.ejs
@@ -60,6 +60,9 @@
             </div>
         </div>
 
+        <div class="w-100 bg-light text-center">
+            <p id="uploadResult" class="overflow-auto">آدرس عکس آپلود شده</p>
+        </div>
 
         <div class="form-group">
             <h5>متن اصلی پست</h5>
