--- a/views/private/blogs.ejs
+++ b/views/private/blogs.ejs
@@ -31,6 +31,7 @@
                 <% } %>
             </tbody>
         </table>
+        <%- include("../includes/pagination.ejs") %>
     </div>
     <% } else { %>
     <div class="text-center">
