--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,12 @@
 <%- include('./includes/navbar.ejs') %>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col">
+            <%- include('./includes/blogPost.ejs') %>
+
+            <!-- Pagination -->
+        </div>
+    </div>
+</div>
+<%- include('./includes/pagination.ejs') %> 
+<%- include('./includes/footer.ejs') %> 
