--- a/views/private/addPost.ejs
+++ b/views/private/addPost.ejs
@@ -3,7 +3,12 @@
     <%- include("../includes/validationErrors.ejs") %>
 </div>
 <div class="d-flex align-items-center justify-content-center">
-    <form action="/dashboard/add-post" class="w-50" method="POST">
+    <form
+        action="/dashboard/add-post"
+        class="w-50"
+        method="POST"
+        enctype="multipart/form-data"
+    >
         <label for="selectedThumbnail">عکس بند انگشتی</label>
         <div class="input-group mb-3">
             <input
