--- a/views/post.ejs
+++ b/views/post.ejs
@@ -24,7 +24,7 @@
             <div class="text-center">
                 <img
                     class="img-fluid rounded"
-                    src="http://placehold.it/750x300"
+                    src="http://localhost:3000/uploads/thumbnails/<%= post.thumbnail %>"
                     alt=""
                 />
             </div>
@@ -72,7 +72,7 @@
                     alt=""
                 />
                 <div class="media-body">
-                    <h5 class="mt-0">میلاد فلاح</h5>
+                    <h5 class="mt-0">یونس قربانی</h5>
                     نظر تست
 
                     <div class="media mt-4">
@@ -82,7 +82,7 @@
                             alt=""
                         />
                         <div class="media-body">
-                            <h5 class="mt-0">میلاد فلاح</h5>
+                            <h5 class="mt-0">یونس قربانی</h5>
                             نظر تست
                         </div>
                     </div>
