--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,5 +32,7 @@
             data-sitekey="6Lcs0Q0aAAAAACw0Kznf2C8aNmrOi0PcrB5rgobS"
         ></div>
     </div>
+    <a href="/users/forget-password">فراموشی رمز عبور</a>
+    <br>
     <button class="btn btn-lg btn-primary btn-block" type="submit">ورود</button>
 </form>
