--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#">درباره</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">تماس با ما</a>
+                <a class="nav-link" href="/contact">تماس با ما</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/users/register"> ثبت نام </a>
