--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -36,16 +36,7 @@
                 <a class="nav-link" href="/users/login"> ورود </a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">
-                جستجو
-            </button>
-            <input
-                class="form-control ml-sm-2"
-                type="text"
-                placeholder="جستجو"
-                aria-label="Search"
-            />
-        </form>
+        <!-- search -->
+        <%- include("./search.ejs") %>
     </div>
 </nav>
