--- a/views/layouts/dashLayout.ejs
+++ b/views/layouts/dashLayout.ejs
@@ -52,12 +52,15 @@
             >
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <form action="/dashboard/search" method="POST" class="w-100">
             <input
                 class="form-control form-control-dark w-100"
                 type="text"
+                name="search"
                 placeholder="جستجو"
                 aria-label="Search"
             />
+        </form>
             <ul class="navbar-nav px-3">
                 <li class="nav-item text-nowrap">
                     <a class="nav-link" href="/users/logout">خروج</a>
